added OAuth2 authentication with github
