# controllers/animal.js
@@ -14,6 +14,9 @@ exports.create = (req, res) => {
         #swagger.responses[400] = {
             schema: { message: `Content can not be empty!`}
         }
+        #swagger.responses[401] = {
+            schema: {$ref: '#/definitions/notAuthed'}
+        }
         #swagger.responses[500] = {
             schema: { message: `Some error occurred while creating an Animal Record for id of [animal_id].`}
         }
@@ -144,6 +147,9 @@ exports.update = (req, res) => {
         #swagger.responses[400] = {
             schema: { message: 'Updated data cannot be empty!' }
         }
+        #swagger.responses[401] = {
+            schema: {$ref: '#/definitions/notAuthed'}
+        }
         #swagger.responses[404] = {
             schema: { message: `No Animal Record found for id of [animal_id].`}
         }
@@ -188,6 +194,9 @@ exports.delete = (req, res) => {
     /*
         #swagger.summary = 'Deletes an Animal Record'
         #swagger.tags=['Animal Records']
+        #swagger.responses[401] = {
+            schema: {$ref: '#/definitions/notAuthed'}
+        }
         #swagger.responses[404] = {
             schema: { message: `No Animal Record found for id of [animal_id].`}
         }
