# routes/index.js
@@ -1,4 +1,5 @@
 const routes = require('express').Router();
+const passport = require('passport');
 
 const adoption_record = require('./adoption_record');
 const animal = require('./animal');
@@ -9,5 +10,30 @@ routes.use('/animals', animal);
 routes.use('/households', household);
 
 routes.use('/', require('./api-docs'));
+
+routes.get(
+    '/login',
+    passport.authenticate('github'),
+    (req, res) => {}
+    /*
+        #swagger.tags=['Authentication']
+        #swagger.summary="Logs the User in"
+    */
+);
+routes.get(
+    '/logout',
+    (req, res, next) => {
+        req.logout((error) => {
+            if (error) {
+                res.redirect('/api-docs');
+            }
+        });
+        res.redirect('/');
+    }
+    /*
+        #swagger.tags=['Authentication']
+        #swagger.summary="Logs the User out"
+    */
+);
 
 module.exports = routes;
